--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="container">
             <img class="logo" src="/img/cloudaria-md.png">
-            <p>Comming soon ... </p>
+            <p>Coming soon ... </p>
             <a href="mailto:info@cloudaria.io">info@cloudaria.io</a>
         </div>
 
