added analytics screenshots

--- a/voices/index.html
+++ b/voices/index.html
@@ -261,7 +261,7 @@
               </div>
 
               <div class="col col-half">
-                <img src="http://placehold.it/420x420" alt="">
+                <img src="images/slide-3.jpg" alt="">
               </div>
             </div>
           </section>
@@ -269,7 +269,7 @@
           <section class="story story--4 row">
             <div class="container">
               <div class="col col-half">
-                <img src="http://placehold.it/420x420" alt="">
+                <img src="images/slide-4.jpg" alt="">
               </div>
 
               <div class="col col-half">
