--- a/voices/index.html
+++ b/voices/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="http://cloudaria.io/voices/" />
     <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
     <meta property="og:description" content="VOICES by cloudaria helps you unlock these visual conversations and tell powerful stories with images and videos, across all touch points." />
-    <meta property="og:image" content="http://cloudaria.io/voices/images/Cover-Image.jpg" />
+    <meta property="og:image" content="http://cloudaria.io/voices/images/slide-1.png" />
 
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'> -->
