--- a/voices/index.html
+++ b/voices/index.html
@@ -4,17 +4,59 @@
     <meta charset="utf-8">
     <title>Voices - Visual Content Engine for Brands</title>
     <meta name="description" content="VOICES by cloudaria helps you unlock these visual conversations and tell powerful stories with images and videos, across all touch points.">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:url" content="http://cloudaria.io/voices/" />
     <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
     <meta property="og:description" content="VOICES by cloudaria helps you unlock these visual conversations and tell powerful stories with images and videos, across all touch points." />
-    <meta property="og:image" content="http://cloudaria.io/voices/images/slide-1.png" />
+    <meta property="og:image" content="http://cloudaria.io/voices/images/slide-5.png" />
 
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'> -->
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
     <style>
+    @media only screen 
+    and (min-device-width : 320px) 
+    and (max-device-width : 480px) {
+      h1 {
+        font-family: "Source Sans Pro",Helvetica, arial,sans-serif;
+        font-size: 30px;
+        text-shadow: 0 1px 6px #000;
+        margin-bottom: 36px;
+        font-weight: 600;
+      }
+      h2 {
+        font-family: "Source Sans Pro",Helvetica, arial,sans-serif;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 1.2;
+        color: #444;
+        margin: 24px 0 30px;
+      }
+      h3,
+      h4 {
+        color: #C41E3A;
+        text-transform: uppercase;
+        font-size: 18px;
+        padding: 6px 0;
+        font-weight: 600;
+        text-align: center;
+      }
+      h4 {
+        color: #fff;
+      }
+      p {
+        font-size: 18px;
+        line-height: 1.5;
+      }
+      img {
+        max-width: 100%;
+      }
+    }
+
+    @media only screen 
+    and (min-width : 1824px) {
       * {
         margin: 0;
         padding: 0;
@@ -263,6 +305,7 @@
       #a666 {
         display: none;
       }
+    }
     </style>
   </head>
   <body>
