--- a/voices/index.html
+++ b/voices/index.html
@@ -324,8 +324,7 @@
         <p class="desc">
         Increasingly, your customers are communicating in pictures, not words. <br>
         VOICES by cloudaria helps you unlock these visual conversations and tell powerful <br>
-        stories <br>
-        with images and videos, across all touch points.
+        stories with images and videos, across all touch points.
         </p>
         <button class="cta" data-toggle="modal" data-target="#request">request a demo</button>
       </div>
