--- a/voices/index.html
+++ b/voices/index.html
@@ -417,6 +417,7 @@
       .modal-footer {
         background: #333;
         color; #fff;
+        text-align: center;
       }
       .contact-info {
         color: #fff;
