--- a/voices/index.html
+++ b/voices/index.html
@@ -405,6 +405,7 @@
 
       .modal-dialog {
         top: 38px;
+        width: 360px;
       }
       .modal-header {
         background: #C41E3A;
@@ -647,7 +648,7 @@
                 </div>
                 <input type="text" name="age" id="a666">
 
-                <button type="submit" class="btn btn-primary btn-block btn-lg" id="contact-btn">submit</button>
+                <button type="submit" class="btn btn-primary btn-block btn-lg" id="contact-btn">Submit</button>
               </form>
 
             </div>
