--- a/voices/index.html
+++ b/voices/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
-    <title>Voices - Visual Content Engine for Brands</title>
+    <title>Voices by cloudaria - Visual Content Engine for Brands</title>
     <meta name="description" content="VOICES by cloudaria helps you unlock these visual conversations and tell powerful stories with images and videos, across all touch points.">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
