changed description and favicon

--- a/voices/index.html
+++ b/voices/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Voices by cloudaria - Visual Content Engine for Brands</title>
-    <meta name="description" content="VOICES by cloudaria helps you unlock these visual conversations and tell powerful stories with images and videos, across all touch points.">
+    <meta name="description" content="Increasingly, your customers are communicating in pictures, not words. 
+VOICES by cloudaria helps you unlock these visual conversations and tell powerful 
+stories with images and videos, across all touch points.">
+    <link rel="shortcut icon" href="http://38.media.tumblr.com/avatar_f66ccfc11524_128.png">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:url" content="http://cloudaria.io/voices/" />
     <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
-    <meta property="og:description" content="VOICES by cloudaria helps you unlock these visual conversations and tell powerful stories with images and videos, across all touch points." />
-    <meta property="og:image" content="http://cloudaria.io/voices/images/slide-5.png" />
+    <meta property="og:description" content="Increasingly, your customers are communicating in pictures, not words. 
+VOICES by cloudaria helps you unlock these visual conversations and tell powerful 
+stories with images and videos, across all touch points." />
+    <meta property="og:image" content="http://cloudaria.io/voices/images/Cover-Image.jpg" />
 
     <link rel="stylesheet" href="bootstrap.min.css">
     <!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'> -->
