transparent image for slide-2

--- a/voices/index.html
+++ b/voices/index.html
@@ -492,7 +492,7 @@ stories with images and videos, across all touch points." />
           <section class="story story--2">
             <div class="container row">
               <div class="col col-half">
-                <div class="slide-img"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="slide-img"><img src="images/slide-2.png" alt=""></div>
               </div>
 
               <div class="col col-half">
