added twitter cards info

--- a/voices/index.html
+++ b/voices/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Voices by cloudaria - Visual Content Engine for Brands</title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@cloudaria1" />
     <meta name="description" content="Increasingly, your customers are communicating in pictures, not words. 
 VOICES by cloudaria helps you unlock these visual conversations and tell powerful 
 stories with images and videos, across all touch points.">
