changed OG:URL and 404 page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Cloudaria helps you create compelling consumer-driven stories with images and vi
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:url" content="http://cloudaria.io/voices/" />
+  <meta property="og:url" content="http://cloudaria.io" />
   <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
   <meta property="og:description" content="You need engaging content every day, across all your channels. 
 Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them." />
