added correct URL for image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="twitter:title" content="Visual Content Engine for Brands">
   <meta name="twitter:description" content="You need engaging content every day, across all your channels. 
 Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them.">
-  <meta name="twitter:image:src" content="http://cloudaria.io/voices/images/Cover-Image.jpg">
+  <meta name="twitter:image:src" content="http://cloudaria.io/images/Cover-Image.jpg">
   <meta name="description" content="You need engaging content every day, across all your channels. 
 Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them.">
   <link rel="shortcut icon" href="http://38.media.tumblr.com/avatar_f66ccfc11524_128.png">
@@ -20,7 +20,7 @@ Cloudaria helps you create compelling consumer-driven stories with images and vi
   <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
   <meta property="og:description" content="You need engaging content every day, across all your channels. 
 Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them." />
-  <meta property="og:image" content="http://cloudaria.io/voices/images/Cover-Image.jpg" />
+  <meta property="og:image" content="http://cloudaria.io/images/Cover-Image.jpg" />
 
   <link rel="stylesheet" href="bootstrap.min.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
