--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="twitter:creator" content="@cloudaria1">
   <meta name="twitter:title" content="Visual Content Engine for Brands">
   <meta name="twitter:description" content="You need engaging content every day, across all your channels. 
-Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them.">
+Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them across all touch points.">
   <meta name="twitter:image:src" content="http://cloudaria.io/images/Cover-Image.jpg">
   <meta name="description" content="You need engaging content every day, across all your channels. 
-Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them.">
+Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them across all touch points.">
   <link rel="shortcut icon" href="http://38.media.tumblr.com/avatar_f66ccfc11524_128.png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@ Cloudaria helps you create compelling consumer-driven stories with images and vi
   <meta property="og:url" content="http://cloudaria.io" />
   <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
   <meta property="og:description" content="You need engaging content every day, across all your channels. 
-Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them." />
+Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them across all touch points." />
   <meta property="og:image" content="http://cloudaria.io/images/Cover-Image.jpg" />
 
   <link rel="stylesheet" href="bootstrap.min.css">
@@ -455,7 +455,7 @@ Cloudaria helps you create compelling consumer-driven stories with images and vi
           display: block;
           width: 32px;
           height: 20px;
-          margin: 120px auto 0;
+          margin: 90px auto 0;
         }
       }
       </style>
@@ -478,7 +478,8 @@ Cloudaria helps you create compelling consumer-driven stories with images and vi
         <h1>Visual Content Engine for Brands</h1>
         <p class="desc">
           You need engaging content every day, across all your channels. <br>
-          Cloudaria helps you create compelling consumer-driven stories with images and videos, and amplify them.
+          Cloudaria helps you create compelling consumer-driven stories with images and videos, <br>
+           and amplify them across all touch points.
         </p>
         <button class="cta" data-toggle="modal" data-target="#request">request a demo</button>
         <a href="#main" id="read-more"><img src="images/arrow.png" alt="Read more" class="readmore-arrow"></a>
