changed the button size and header weight

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       text-align: center;
     }
 
+    h1 {
+      font-weight: 600; 
+    }
+
     h3,
     h4 {
       color: #C41E3A;
@@ -278,6 +282,13 @@
       color: #fff;
       font-weight: 600;
     }
+
+    .cta {
+      padding: 18px 54px;
+    }
+    .cta--small {
+      padding: 6px 10px;
+    }
   }
   @media only screen and (min-width : 1024px) {
     .hero {
@@ -328,7 +339,8 @@
   <div class="hero">
     <h1>Visual Content Engine for Brands</h1>
     <p class="desc">
-      Cloudaria is the marketing suite for the visual web. <br> We help brands and media companies <br> create socially wired digital content experiences.
+      You need engaging content every day, across all your channels. <br>
+      Cloudaria helps you create compelling consumer-driven stories with images and videos, <br> and amplify them.
     </p>
     <button class="cta" data-toggle="modal" data-target="#request">request a demo</button>
     <a href="#main" id="read-more"></a>
