--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
     }
     h2 {
       font-size: 36px;
+      line-height: 1.2;
+      margin-bottom: 24px;
     }
     p {
       font-size: 18px;
-    }
-    .slide-img {
-      width: 90%;
+      line-height: 1.6;
     }
     .col-half {
       display: table-cell;
@@ -260,6 +260,9 @@
       float: left;
       width:50%;
     }
+    .media-img img {
+      width: 100%;
+    }
     .story--1 .media-img,
     .story--3 .media-img {
       left: 50%;
@@ -269,6 +272,7 @@
     .story--3 .media-content {
       left: -50%;
       position: relative;
+      padding: 0 30px;
     }
     .header-wrap {
       display: table;
@@ -296,8 +300,12 @@
       padding-bottom: 100px;
     }
     .container {
-      width: 1140px;
+      width: 1000px;
       margin: auto;
+    }
+    .story--2,
+    .story--4 {
+      padding: 72px 0;
     }
     .contact-block,
     .col-third {
@@ -317,6 +325,12 @@
       display: block;
       font-size: 18px;
       color: #fff;
+    }
+  }
+
+  @media only screen and (min-width : 1200px) {
+    .container {
+      width: 1140px;
     }
   }
 
@@ -340,7 +354,7 @@
     <h1>Visual Content Engine for Brands</h1>
     <p class="desc">
       You need engaging content every day, across all your channels. <br>
-      Cloudaria helps you create compelling consumer-driven stories with images and videos, <br> and amplify them.
+      Cloudaria helps you create compelling consumer-driven stories with images and videos, <br> and amplify them across all touch points.
     </p>
     <button class="cta" data-toggle="modal" data-target="#request">request a demo</button>
     <a href="#main" id="read-more"></a>
@@ -552,41 +566,17 @@
       $("html, body").animate({ scrollTop: coords.top });
     });
 
-    var header = $('.header');
-    var hero = $('.hero');
-    // hero.css('height', $(window).height() - header.outerHeight() + 'px');
-
   });
   </script>
-  <!-- begin olark code -->
-  <script data-cfasync="false" type='text/javascript'>/*<![CDATA[*/window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){
-    f[z]=function(){
-      (a.s=a.s||[]).push(arguments)};var a=f[z]._={
-      },q=c.methods.length;while(q--){(function(n){f[z][n]=function(){
-        f[z]("call",n,arguments)}})(c.methods[q])}a.l=c.loader;a.i=nt;a.p={
-          0:+new Date};a.P=function(u){
-            a.p[u]=new Date-a.p[0]};function s(){
-              a.P(r);f[z](r)}f.addEventListener?f.addEventListener(r,s,false):f.attachEvent("on"+r,s);var ld=function(){function p(hd){
-                hd="head";return["<",hd,"></",hd,"><",i,' onl' + 'oad="var d=',g,";d.getElementsByTagName('head')[0].",j,"(d.",h,"('script')).",k,"='",l,"//",a.l,"'",'"',"></",i,">"].join("")}var i="body",m=d[i];if(!m){
-                  return setTimeout(ld,100)}a.P(1);var j="appendChild",h="createElement",k="src",n=d[h]("div"),v=n[j](d[h](z)),b=d[h]("iframe"),g="document",e="domain",o;n.style.display="none";m.insertBefore(n,m.firstChild).id=z;b.frameBorder="0";b.id=z+"-loader";if(/MSIE[ ]+6/.test(navigator.userAgent)){
-                    b.src="javascript:false"}b.allowTransparency="true";v[j](b);try{
-                      b.contentWindow[g].open()}catch(w){
-                        c[e]=d[e];o="javascript:var d="+g+".open();d.domain='"+d.domain+"';";b[k]=o+"void(0);"}try{
-                          var t=b.contentWindow[g];t.write(p());t.close()}catch(x){
-                            b[k]=o+'d.write("'+p().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};ld()};nt()})({
-                              loader: "static.olark.com/jsclient/loader0.js",name:"olark",methods:["configure","extend","declare","identify"]});
-                            /* custom configuration goes here (www.olark.com/documentation) */
-                            olark.identify('4238-152-10-8989');/*]]>*/</script><noscript><a href="https://www.olark.com/site/4238-152-10-8989/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript>
-                            <!-- end olark code -->
-                            <script>
-                            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-                            ga('create', 'UA-55123659-1', 'auto');
-                            ga('send', 'pageview');
+  ga('create', 'UA-55123659-1', 'auto');
+  ga('send', 'pageview');
 
-                            </script>
-                          </body>
-                          </html>
+  </script>
+</body>
+</html>
