changed voices to app

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:url" content="http://cloudaria.io" />
-  <meta property="og:title" content="Voices - Visual Content Engine for Brands" />
+  <meta property="og:title" content="Cloudaria - Visual Content Engine for Brands" />
   <meta property="og:description" content="Cloudaria is the marketing suite for the visual web. We help brands and media companies create socially wired digital content experiences." />
   <meta property="og:image" content="http://cloudaria.io/images/Cover-Image.jpg" />
 
@@ -345,7 +345,7 @@
 
       <div class="col-half align-right links top-links">
         <a href="http://blog.cloudaria.io" target="_blank">Blog</a>
-        <a href="http://voices.cloudaria.io">Customer Login</a>
+        <a href="http://app.cloudaria.io">Customer Login</a>
         <a class="cta cta--small" data-toggle="modal" data-target="#request">request a demo</a>
       </div>
     </div>
